--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-Version 0.3.0 unreleasead
+Version 0.3.0 2020-01-24
 	* Add get-examples command
 	* Add get-smorfs command
 	* Convert to scikit-learn
 	* Updated training sets
+	* Fix license (must be GPL because of Peptides)
 
 Version 0.2.0 2020-01-14
 	* Complete release
