BUG Change prodigal parameters to avoid crashing
- STT_NOD
- MIN_EDGE_GENE
- MAX_SAM_OVLP
- ST_WINDOW

See https://github.com/hyattpd/Prodigal/issues/46 for a background.

Increasing STT_NOD is further necessary because allow Prodigal dealing
with higher number of nodes in long sequences

Decreasing MIN_EDGE_GENE, ST_WINDOW, and MAX_SAM_OVLP to meet the values
established by the reduction of the MIN_GENE_SIZE parameter. This
creates more homogeneous nodes.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 Version 0.4.0+
+	* Fix bug with Prodigal by changing internal parameters
 	* Fix bug with using --force and existing directories
 
 Version 0.4.0 2020-03-16
