--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 0.5.0+
+	* Use atomic writing for output
+
 Version 0.5.0 2020-05-11
 	* Fix bug with Prodigal by changing internal parameters
 	* Fix bug with using --force and existing directories
