--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 Version 0.5.0+
+    * Add --log-file flag
+    * Add usage example in command line help message
 	* Use atomic writing for output
 
 Version 0.5.0 2020-05-11
