--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 1.0.0
+	* Add README.md files to the output directories documenting the output files
+
 Version 0.6.1 2020-10-29
 	* Make atomicwrites an optional dependency
 
