--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-Version 1.0.0
+Version 1.0.0 2020-12-20
 	* Add README.md files to the output directories documenting the output files
 
 Version 0.6.1 2020-10-29
