--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 Unreleased
 	* Fix classifier list for PyPI
+	* Add support for .bz2 & .xz fasta files
 
 Version 1.0.1 2021-09-02
 	* No longer crash on very short peptides (1 or 2 amino acids)
