BUG Fix single-ended abundance mode
abundance and reads modes were broken for single-ended reads

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 Unreleased
 	* Fix classifier list for PyPI
 	* Add support for .bz2 & .xz fasta files
+	* Fix abundance/reads modes when single-ended reads were used
 
 Version 1.0.1 2021-09-02
 	* No longer crash on very short peptides (1 or 2 amino acids)
