--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,9 @@
 Version 1.1.0 2021-11-08
 	* Fix classifier list for PyPI
 	* Add support for .bz2 & .xz fasta files
-	* Fix abundance/reads modes when single-ended reads were used
 	* Eliminated R dependency
 	* Include more extensive testing
-	* Code tweaks made Macrel about 3.5 times faster than before:
+	* New feature implementation made Macrel about 3.5 times faster than before
 	* Fix abundance/reads modes when single-ended reads were used
 
 Version 1.0.1 2021-09-02
