--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
-Version 1.2.0 2022-04-12
-	* Implement pyrodigal v.0.7.3 instead of using Prodigal_sm for gene prediction    
+Version 1.2.0 2022-05-09
+	* Use pyrodigal instead of Prodigal_sm for gene prediction
 	* Correct bug in the generation of README files in the output folder
 
 Version 1.1.0 2021-11-08
