--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Unreleased
+	* Query AMPSphere online
+
 Version 1.3.0 2023-12-05
 	* Add compatibility with Pyrodigal ≥3
 	* Add density estimates to output
