--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 Unreleased
 	* Add support for local match (exact only for now)
+	* Slightly change output format for AMPSphere matching
 
 Version 1.4.0 2024-06-27
 	* Query AMPSphere online
