--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-Unreleased
+Version 1.5.0 2024-09-20
 	* Add support for local searching
 	* Slightly change output format for AMPSphere matching
 	* Add --verbose and --quiet flags
