ENH Switch to ONNX for model storage
This will avoid warnings related to version mismatches (e.g., #59)

Retrained models to fix off by one error in feature indexing too

This changes results, but probabilities are 0.89 correlated (Spearman)
with previous version

Alas, macrel now requires a recent(ish) version of onnxruntime which
means that Python 3.6 and 3.7 are no longer tested. OTOH, we now test on
3.12 as well

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Unreleased
+	* Switch to ONNX for model storage
+
 Version 1.5.0 2024-09-20
 	* Add support for local searching
 	* Slightly change output format for AMPSphere matching
